<resources>
    <string name="kde_connect">KDE Connect</string>
    <string name="manifest_label_share">Send to Device</string>
    <string name="foreground_notification_no_devices">Not connected to any device</string>
    <string name="foreground_notification_devices">Connected to: %s</string>
    <string name="foreground_notification_send_clipboard">Send Clipboard</string>
    <string name="pref_plugin_telephony">Telephony notifier</string>
    <string name="pref_plugin_telephony_desc">Send notifications for incoming calls</string>
    <string name="pref_plugin_battery">Battery report</string>
    <string name="pref_plugin_battery_desc">Periodically report battery status</string>
    <string name="pref_plugin_connectivity_report">Connectivity report</string>
    <string name="pref_plugin_connectivity_report_desc">Report network signal strength and status</string>
    <string name="pref_plugin_digitizer">Drawing tablet</string>
    <string name="pref_plugin_digitizer_desc">Use your device as a pressure sensitive drawing tablet</string>
    <string name="pref_plugin_sftp">Filesystem access</string>
    <string name="pref_plugin_sftp_desc">Allows to browse this device\'s filesystem remotely</string>
    <string name="pref_plugin_clipboard">Clipboard sync</string>
    <string name="pref_plugin_clipboard_desc">Share the clipboard content</string>
    <string name="pref_plugin_clipboard_sent">Clipboard Sent</string>
    <string name="pref_plugin_mousepad">Remote input</string>
    <string name="pref_plugin_mousepad_desc_nontv">Use your phone or tablet as a touchpad and keyboard</string>
    <string name="pref_plugin_mousepad_desc_tv">Use your phone or tablet as a TV remote</string>
    <string name="pref_plugin_presenter">Presentation remote</string>
    <string name="pref_plugin_presenter_desc">Use your device to change slides in a presentation</string>
    <string name="pref_plugin_remotekeyboard">Receive remote keypresses</string>
    <string name="pref_plugin_remotekeyboard_desc">Receive keypress events from remote devices</string>
    <string name="pref_plugin_mpris">Multimedia controls</string>
    <string name="pref_plugin_mpris_desc">Provides a remote control for your media player</string>
    <string name="pref_plugin_runcommand">Run Command</string>
    <string name="pref_plugin_runcommand_desc">Trigger remote commands from your phone or tablet</string>
    <string name="pref_plugin_contacts">Contacts Synchronizer</string>
    <string name="pref_plugin_contacts_desc">Allow synchronizing the device\'s contacts book</string>
    <string name="pref_plugin_ping">Ping</string>
    <string name="pref_plugin_ping_desc">Send and receive pings</string>
    <string name="pref_plugin_adbconnection">ADB Connection</string>
    <string name="pref_plugin_adbconnection_desc">Connect to device via ADB and scrcpy</string>
    <string name="pref_plugin_portforward">Port Forward</string>
    <string name="pref_plugin_portforward_desc">Forward TCP/UDP ports between devices</string>
    <string name="port_forward_open">Port Forward</string>
    <string name="port_forward_title">Port Forward</string>
    <string name="adb_connect">Connect</string>
    <string name="adb_disconnect">Disconnect</string>
    <string name="adb_scrcpy">Scrcpy</string>
    <string name="adb_host">ADB Host</string>
    <string name="adb_host_summary">IP address of the target device</string>
    <string name="adb_host_dialog">Enter ADB Host</string>
    <string name="adb_port">ADB Port</string>
    <string name="adb_port_summary">ADB TCP port (default: 5555)</string>
    <string name="adb_port_dialog">Enter ADB Port</string>
    <string name="adb_auto_connect">Auto Connect</string>
    <string name="adb_auto_connect_summary">Automatically connect when device is found</string>
    <string name="adb_reconnect_delay">Reconnect Delay</string>
    <string name="adb_reconnect_delay_summary">Delay before auto reconnect when disconnected</string>
    <string name="adb_host_hint">Host IP</string>
    <string name="adb_port_hint">Port</string>
    <string name="adb_command_hint">Enter command</string>
    <string name="adb_execute">Execute</string>
    <string name="adb_clear">Clear</string>
    <string name="install_apk_title">Install APK via ADB</string>
    <string name="scrcpy_connecting">Connecting to scrcpy...</string>
    <string name="scrcpy_disconnect">Disconnect</string>
    <string name="scrcpy_back">Back</string>
    <string name="scrcpy_home">Home</string>
    <string name="pref_plugin_notifications">Notification sync</string>
    <string name="pref_plugin_notifications_desc">Access your notifications from other devices</string>
    <string name="pref_plugin_receive_notifications">Receive notifications</string>
    <string name="pref_plugin_receive_notifications_desc">Receive notifications from the other device and display them on Android</string>
    <string name="pref_plugin_sharereceiver">Share and receive</string>
    <string name="pref_plugin_sharereceiver_desc">Share files and URLs between devices</string>
    <string name="pref_plugin_inputdevicesreceiver">Share input devices</string>
    <string name="pref_plugin_inputdevicesreceiver_desc">Share mouse and keyboard with the remote device</string>
    <string name="device_list_empty">No devices</string>
    <string name="ok">OK</string>
    <string name="sad_ok">OK :(</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open settings</string>
    <string name="no_permissions">You need to grant permission to access notifications</string>
    <string name="no_permission_mprisreceiver">To be able to control your media players you need to grant access to the notifications</string>
    <string name="no_permissions_remotekeyboard">To receive keypresses you need to activate the KDE Connect Remote Keyboard</string>
    <string name="send_ping">Send ping</string>
    <string name="open_mpris_controls">Multimedia control</string>
    <string name="remotekeyboard_editing_only" translatable="false">remotekeyboard_editing_only</string>
    <string name="remotekeyboard_editing_only_title" translatable="true">Handle remote keys only when editing</string>
    <string name="remotekeyboard_not_connected" translatable="true">There is no active remote keyboard connection, establish one in kdeconnect</string>
    <string name="remotekeyboard_connected" translatable="true">Remote keyboard connection is active</string>
    <string name="remotekeyboard_multiple_connections" translatable="true">There is more than one remote keyboard connection, select the device to configure</string>
    <string name="open_mousepad">Remote input</string>
    <string name="open_mousepad_tv">TV remote</string>
    <string name="mousepad_info">Move a finger on the screen to move the mouse cursor. Tap for a click, and use two/three fingers for right and middle buttons. Use 2 fingers to scroll. Use a long press to drag\'n drop. Gyro mouse functionality can be enabled from plugin preferences</string>
    <string name="mousepad_info_no_gestures">Move a finger on the screen to move the mouse cursor, tap for a click.</string>
    <string name="mousepad_keyboard_input_not_supported">Keyboard input not supported by the paired device</string>
    <string name="mousepad_single_tap_settings_title">Set one finger tap action</string>
    <string name="mousepad_double_tap_settings_title">Set two finger tap action</string>
    <string name="mousepad_triple_tap_settings_title">Set three finger tap action</string>
    <string name="mousepad_sensitivity_settings_title">Set touchpad sensitivity</string>
    <string name="mousepad_mouse_buttons_title">Show mouse buttons</string>
    <string name="mousepad_acceleration_profile_settings_title">Set pointer acceleration</string>
    <string name="mousepad_single_tap_key" translatable="false">mousepad_single_tap_key</string>
    <string name="mousepad_double_tap_key" translatable="false">mousepad_double_tap_key</string>
    <string name="mousepad_triple_tap_key" translatable="false">mousepad_triple_tap_key</string>
    <string name="mousepad_sensitivity_key" translatable="false">mousepad_sensitivity_key</string>
    <string name="mousepad_acceleration_profile_key" translatable="false">mousepad_acceleration_profile_key</string>
    <string name="mousepad_scroll_direction_title">Reverse Scrolling Direction</string>
    <string name="mousepad_scroll_direction" translatable="false">mousepad_scroll_direction</string>
    <string name="mousepad_scroll_sensitivity" translatable="false">mousepad_scroll_sensitivity</string>
    <string name="mousepad_scroll_sensitivity_title">Scroll sensitivity</string>
    <string name="gyro_mouse_enabled" translatable="false">gyro_mouse_enabled</string>
    <string name="mousepad_mouse_buttons_enabled_pref" translatable="false">mouse_buttons_enabled</string>
    <string name="mousepad_doubletap_drag_enabled_pref" translatable="false">doubletap_drag_enabled</string>
    <string name="gyro_mouse_enabled_title">Enable gyroscope mouse</string>
    <string name="gyro_mouse_sensitivity_title">Gyroscope sensitivity</string>
    <string name="gyro_mouse_sensitivity" translatable="false">gyro_mouse_sensitivity</string>
    <string name="bigscreen_hide_mouse_input">Hide mouse and keyboard remote input button</string>
    <string name="bigscreen_show_home_title">Show Home button</string>
    <string name="bigscreen_show_back_title">Show Back button</string>
    <string-array name="mousepad_tap_entries">
        <item>Left click</item>
        <item>Right click</item>
        <item>Middle click</item>
        <item>Nothing</item>
    </string-array>
    <string name="scrcpy_settings_category">Scrcpy Settings</string>
    <string name="scrcpy_video_codec">Video Codec</string>
    <string name="scrcpy_video_codec_summary">Select video encoding codec</string>
    <string name="scrcpy_max_size">Max Size</string>
    <string name="scrcpy_max_size_summary">Limit video dimension (0 = no limit)</string>
    <string name="scrcpy_max_size_dialog">Enter max size (pixels)</string>
    <string name="scrcpy_max_fps">Max FPS</string>
    <string name="scrcpy_max_fps_summary">Limit frame rate (empty = no limit)</string>
    <string name="scrcpy_max_fps_dialog">Enter max FPS</string>
    <string name="scrcpy_video_bit_rate">Video Bit Rate</string>
    <string name="scrcpy_video_bit_rate_summary">Video encoding quality preset</string>
    <string name="scrcpy_control">Enable Control</string>
    <string name="scrcpy_control_summary">Allow touch and key input on remote device</string>
    <string name="scrcpy_clipboard_sync">Clipboard Sync</string>
    <string name="scrcpy_clipboard_sync_summary">Synchronize clipboard between devices</string>
    <string name="scrcpy_key_inject_mode">Key Inject Mode</string>
    <string name="scrcpy_key_inject_mode_summary">How to inject key events</string>
    <string name="scrcpy_stay_awake">Stay Awake</string>
    <string name="scrcpy_stay_awake_summary">Keep remote device screen on</string>
    <string name="scrcpy_turn_screen_off">Turn Screen Off</string>
    <string name="scrcpy_turn_screen_off_summary">Turn off remote device screen while mirroring</string>
    <string name="scrcpy_floating_button">Control</string>
    <string name="scrcpy_app_switch">App Switch</string>
    <string name="scrcpy_power">Power</string>
    <string name="scrcpy_volume_up">Vol+</string>
    <string name="scrcpy_volume_down">Vol-</string>
    <string name="scrcpy_volume_mute">Mute</string>
    <string name="scrcpy_menu">Menu</string>
    <string name="scrcpy_notification">Notif</string>
    <string name="scrcpy_screenshot">Shot</string>
    <string name="scrcpy_rotate">Rotate</string>
    <string name="scrcpy_expand_notif">NotifPanel</string>
    <string name="scrcpy_expand_settings">SettingsPanel</string>
    <string name="scrcpy_collapse_panels">Collapse</string>
</resources>